--- a/debian/rules
+++ b/debian/rules
@@ -31,29 +31,14 @@ binary-indep: checkroot
 #	$(install_file) debian/templates debian/tmp/DEBIAN/
 
 	$(install_dir) debian/tmp/usr/share/keyrings/ubuntucn-repo/
-	$(install_file) keyrings/*.gpg debian/tmp/usr/share/keyrings/ubuntucn-repo
+	$(install_file) keyrings/*.asc debian/tmp/usr/share/keyrings/ubuntucn-repo
 
 	$(install_dir) debian/tmp/usr/share/keyrings/ubuntucn-repo/ppa/
-	$(install_file) keyrings/ppa/*.gpg debian/tmp/usr/share/keyrings/ubuntucn-repo/ppa
+	$(install_file) keyrings/ppa/*.asc debian/tmp/usr/share/keyrings/ubuntucn-repo/ppa
 
 	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/
 	$(install_file) debian/origkey.list debian/tmp/usr/share/ubuntucn-repo/
 
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/cn99
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/cn99/ubuntucn
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/cn99/medibuntu
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/cn99/ppa
-	$(install_file) sources.list.d/cn99/ubuntucn/* debian/tmp/usr/share/ubuntucn-repo/sources/cn99/ubuntucn/
-	$(install_file) sources.list.d/cn99/medibuntu/* debian/tmp/usr/share/ubuntucn-repo/sources/cn99/medibuntu/
-	$(install_file) sources.list.d/cn99/ppa/* debian/tmp/usr/share/ubuntucn-repo/sources/cn99/ppa/
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/sohu
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/sohu/ubuntucn
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/sohu/medibuntu
-	$(install_dir) debian/tmp/usr/share/ubuntucn-repo/sources/sohu/ppa
-	$(install_file) sources.list.d/sohu/ubuntucn/* debian/tmp/usr/share/ubuntucn-repo/sources/sohu/ubuntucn/
-	$(install_file) sources.list.d/sohu/medibuntu/* debian/tmp/usr/share/ubuntucn-repo/sources/sohu/medibuntu/
-	$(install_file) sources.list.d/sohu/ppa/* debian/tmp/usr/share/ubuntucn-repo/sources/sohu/ppa/
 
 	$(install_dir) debian/tmp/usr/share/doc/ubuntucn-repo/
 	$(install_file) debian/changelog debian/tmp/usr/share/doc/ubuntucn-repo/
@@ -68,10 +53,9 @@ binary-indep: checkroot
 binary-arch:
 
 define checkdir
-	test -f keyrings/ubuntucn-keyring.gpg
-	test -f keyrings/medibuntu-keyring.gpg
+	test -f keyrings/ubuntucn-keyring.asc
+	test -f keyrings/medibuntu-keyring.asc
 	test -d keyrings/ppa/
-	test -d sources.list.d/
 endef
 
 
